agregar nodos al arbol

--- a/Dom/index.html
+++ b/Dom/index.html
@@ -9,11 +9,11 @@
 <body>
     <section id="main">
         <h1 class="titulo"> El titulo de mi pagina</h1>
-        <article class="texto">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        <article class="articulo">
+           <p class="parrafoArticulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Quibusdam nisi temporibus unde dolores esse laborum tenetur 
             dignissimos exercitationem voluptatibus quam inventore magni
-            asperiores sed recusandae animi accusamus, omnis aliquid odit.
+            asperiores sed recusandae animi accusamus, omnis aliquid odit.</p> 
         </article>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi similique ipsum nihil, 
             fuga dolore dolor a, commodi iure necessitatibus, fugit recusandae. 
