continuar con el curso DOM

--- a/Dom/index.html
+++ b/Dom/index.html
@@ -30,7 +30,7 @@
             ratione dolorem libero! In tempore nisi saepe.
         </p>
     </section>
-    <script src="./main.js">
+    <script src="./main2.js">
     </script>
 </body>
 </html>
